[project]
name = "rollinggo"
version = "0.1.1"
description = "RollingGo hotel search CLI package for uvx."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[project.scripts]
rollinggo = "rollinggo_cli.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rollinggo_cli"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
